--- a/src/header/Navigator.css
+++ b/src/header/Navigator.css
@@ -8,7 +8,7 @@
   display: block;
   width: 0;
   height: 1px;
-  background-color: green;
+  background-color: #008000;
   bottom: 0;
   left: 0;
   transition: 0.2s ease-out;
