--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,16 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+  --main-theme: #FAFAFA;
+  --theme-color: #008000;
+  --text-color: #353535;
+  background-color: var(--main-theme);
+  color: var(--text-color);
 }
+/* @media (prefers-color-scheme: dark) {
+  :root {
+    --main-theme: #151515;
+    --theme-color: #0080FF;
+    --text-color: #DADADA;
+  }
+} */
