--- a/src/main-content/about-components/Description.css
+++ b/src/main-content/about-components/Description.css
@@ -6,6 +6,6 @@
     border-right: none;
   }
   100% {
-    border-right: 2px solid #008000;
+    border-right: 2px solid var(--theme-color);
   }
 }
