Finalize website layout and styles

--- a/src/main-content/about-components/Socials.css
+++ b/src/main-content/about-components/Socials.css
@@ -3,8 +3,8 @@
   color: #FAFAFA;
   border-color: var(--text-color);
 }
-.linkedin:hover {
-  background-color: #0077B5;
+.x:hover {
+  background-color: #000000;
   color: #FAFAFA;
   border-color: var(--text-color);
 }
